--- a/VKapp/VKapp/View/Base.lproj/Main.storyboard
+++ b/VKapp/VKapp/View/Base.lproj/Main.storyboard
@@ -145,13 +145,6 @@
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="150"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lzq-Ie-dSC">
-                                            <rect key="frame" x="30" y="25" width="100" height="100"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="100" id="X7Q-Kc-slj"/>
-                                                <constraint firstAttribute="width" constant="100" id="huq-Iw-UHe"/>
-                                            </constraints>
-                                        </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k6W-61-1sh">
                                             <rect key="frame" x="349" y="11" width="45" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -164,19 +157,39 @@
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7NP-wt-62L" customClass="AvatarView" customModule="VKapp" customModuleProvider="target">
+                                            <rect key="frame" x="30" y="25" width="100" height="100"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="1" translatesAutoresizingMaskIntoConstraints="NO" id="BML-RM-I22">
+                                                    <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                                </imageView>
+                                            </subviews>
+                                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="100" id="2VW-Ln-j5Q"/>
+                                                <constraint firstItem="BML-RM-I22" firstAttribute="top" secondItem="7NP-wt-62L" secondAttribute="top" id="IpU-KR-GkU"/>
+                                                <constraint firstAttribute="bottom" secondItem="BML-RM-I22" secondAttribute="bottom" id="Rkn-iX-OZe"/>
+                                                <constraint firstItem="BML-RM-I22" firstAttribute="leading" secondItem="7NP-wt-62L" secondAttribute="leading" id="ly3-Ib-ULl"/>
+                                                <constraint firstAttribute="width" constant="100" id="xU6-Nk-LOY"/>
+                                                <constraint firstAttribute="trailing" secondItem="BML-RM-I22" secondAttribute="trailing" id="xX1-hJ-rew"/>
+                                            </constraints>
+                                            <connections>
+                                                <outlet property="avatar" destination="BML-RM-I22" id="dyg-fH-yDR"/>
+                                            </connections>
+                                        </view>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="lzq-Ie-dSC" firstAttribute="centerY" secondItem="fbo-Rv-Eab" secondAttribute="centerY" id="Hfk-DR-EIx"/>
                                         <constraint firstItem="k6W-61-1sh" firstAttribute="top" secondItem="fbo-Rv-Eab" secondAttribute="topMargin" id="Ih4-0x-Iei"/>
-                                        <constraint firstItem="lzq-Ie-dSC" firstAttribute="leading" secondItem="fbo-Rv-Eab" secondAttribute="leadingMargin" constant="10" id="KAO-sP-Egg"/>
                                         <constraint firstAttribute="bottomMargin" secondItem="RI4-z7-YjD" secondAttribute="bottom" constant="76" id="SJ8-aM-hhX"/>
                                         <constraint firstItem="RI4-z7-YjD" firstAttribute="top" secondItem="k6W-61-1sh" secondAttribute="bottom" constant="10" id="dNf-fj-ehT"/>
+                                        <constraint firstItem="7NP-wt-62L" firstAttribute="leading" secondItem="fbo-Rv-Eab" secondAttribute="leadingMargin" constant="10" id="hoR-cY-ITu"/>
                                         <constraint firstItem="k6W-61-1sh" firstAttribute="trailing" secondItem="fbo-Rv-Eab" secondAttribute="trailingMargin" id="lMH-nD-vDB"/>
                                         <constraint firstItem="RI4-z7-YjD" firstAttribute="trailing" secondItem="fbo-Rv-Eab" secondAttribute="trailingMargin" id="qQb-9r-8Gx"/>
+                                        <constraint firstItem="7NP-wt-62L" firstAttribute="centerY" secondItem="fbo-Rv-Eab" secondAttribute="centerY" id="rDF-0T-Sqg"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <outlet property="friendImage" destination="lzq-Ie-dSC" id="OwP-IT-ex6"/>
+                                    <outlet property="friendImage" destination="7NP-wt-62L" id="eWn-D4-Vr9"/>
                                     <outlet property="friendName" destination="k6W-61-1sh" id="wj5-c3-Pm2"/>
                                     <outlet property="friendSurname" destination="RI4-z7-YjD" id="08L-m7-qn5"/>
                                     <segue destination="QKK-KU-gzQ" kind="show" id="KI2-n9-gya"/>
@@ -414,6 +427,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="1" width="200" height="200"/>
         <image name="equal.circle.fill" catalog="system" width="128" height="121"/>
         <image name="person.2.fill" catalog="system" width="128" height="80"/>
         <image name="plus" catalog="system" width="128" height="113"/>
