--- a/VKapp/VKapp/View/Base.lproj/Main.storyboard
+++ b/VKapp/VKapp/View/Base.lproj/Main.storyboard
@@ -66,20 +66,11 @@
                                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b0y-KS-xIo" customClass="LikeButton" customModule="VKapp" customModuleProvider="target">
-                                        <rect key="frame" x="87" y="595" width="240" height="128"/>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="240" id="vVn-nA-ojc"/>
-                                            <constraint firstAttribute="height" constant="128" id="zgO-tK-myy"/>
-                                        </constraints>
-                                    </view>
                                 </subviews>
                                 <color key="backgroundColor" red="0.67864265489999998" green="1" blue="0.66833503429999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
                                     <constraint firstItem="zdI-WU-DUz" firstAttribute="top" secondItem="VmH-LV-2ZY" secondAttribute="bottom" constant="100" id="3Kl-Fd-TpV"/>
                                     <constraint firstItem="Of5-aO-dDb" firstAttribute="top" secondItem="oCw-3Q-DL3" secondAttribute="top" constant="100" id="3pT-OP-yJS"/>
-                                    <constraint firstItem="b0y-KS-xIo" firstAttribute="centerX" secondItem="oCw-3Q-DL3" secondAttribute="centerX" id="4F6-sB-cVH"/>
                                     <constraint firstAttribute="trailing" secondItem="VmH-LV-2ZY" secondAttribute="trailing" constant="20" id="9BI-2d-Hin"/>
                                     <constraint firstAttribute="bottom" secondItem="zdI-WU-DUz" secondAttribute="bottom" constant="10" id="B7C-hs-kcp"/>
                                     <constraint firstItem="VmH-LV-2ZY" firstAttribute="centerX" secondItem="oCw-3Q-DL3" secondAttribute="centerX" id="I9m-Ne-mQa"/>
@@ -91,7 +82,6 @@
                                     <constraint firstItem="Cg4-lP-vCo" firstAttribute="top" secondItem="Of5-aO-dDb" secondAttribute="bottom" constant="60" id="eTn-Gz-c4I"/>
                                     <constraint firstItem="4UP-z4-Tk0" firstAttribute="top" secondItem="Cg4-lP-vCo" secondAttribute="bottom" constant="20" id="fMx-l2-XV2"/>
                                     <constraint firstItem="zdI-WU-DUz" firstAttribute="centerX" secondItem="oCw-3Q-DL3" secondAttribute="centerX" id="lSt-r2-b9N"/>
-                                    <constraint firstItem="b0y-KS-xIo" firstAttribute="top" secondItem="zdI-WU-DUz" secondAttribute="bottom" constant="23" id="pRl-ia-4dH"/>
                                     <constraint firstItem="4UP-z4-Tk0" firstAttribute="centerX" secondItem="oCw-3Q-DL3" secondAttribute="centerX" id="xra-u9-Hlu"/>
                                 </constraints>
                             </scrollView>
@@ -353,7 +343,7 @@
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ImagesCollectionViewCell" id="tky-OD-iYu" customClass="ImagesCollectionViewCell" customModule="VKapp" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="sh4-Zf-YWz" customClass="ImagesCollectionViewCell" customModule="VKapp" customModuleProvider="target">
+                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="sh4-Zf-YWz">
                                     <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
@@ -378,6 +368,8 @@
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="XMd-p5-6w0" firstAttribute="centerX" secondItem="sh4-Zf-YWz" secondAttribute="centerX" id="3KC-aY-AqL"/>
+                                        <constraint firstItem="XMd-p5-6w0" firstAttribute="leading" secondItem="sh4-Zf-YWz" secondAttribute="leading" constant="15" id="8x4-6y-D50"/>
+                                        <constraint firstAttribute="bottom" secondItem="XMd-p5-6w0" secondAttribute="bottom" constant="15" id="Agd-Mc-RDs"/>
                                         <constraint firstAttribute="trailing" secondItem="zY6-Qq-FID" secondAttribute="trailing" constant="10" id="FEj-Ih-sm2"/>
                                         <constraint firstItem="XMd-p5-6w0" firstAttribute="centerY" secondItem="sh4-Zf-YWz" secondAttribute="centerY" id="Ocr-XH-95I"/>
                                         <constraint firstAttribute="bottom" secondItem="zY6-Qq-FID" secondAttribute="bottom" constant="10" id="wAH-yV-D2m"/>
